--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "react-native-activity-rings",
   "version": "1.0.0",
   "description": "Activity Rings for React Native, compatible with Expo SDK",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "build": "tsc",
+    "prepare": "tsc && echo 'Finished building NPM package'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,8 +19,18 @@
     "react-native": ">= 0.50.0"
   },
   "dependencies": {
-    "react-native-svg": "^12.1.0",
-    "paths-js": "^0.4.10"
+    "paths-js": "^0.4.10",
+    "react-native-svg": "^12.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "~7.9.0",
+    "@types/node": "14.0.13",
+    "@types/react": "^16.9.36",
+    "@types/react-native": "~0.61.23",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-native": "0.61.5",
+    "typescript": "^3.9.5"
   },
   "bugs": {
     "url": "https://github.com/thecodehunter/react-native-activity-rings/issues"
