--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "target": "es6",
-    "jsx": "preserve",
+    "jsx": "react-native",
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "skipLibCheck": true,
