--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "license": "MIT",
   "peerDependencies": {
     "react": "> 16.7.0",
-    "react-native": ">= 0.50.0"
+    "react-native": ">= 0.50.0",
+    "react-native-svg": "^12.1.0"
   },
   "dependencies": {
-    "paths-js": "^0.4.10",
-    "react-native-svg": "^12.1.0"
+    "paths-js": "^0.4.10"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -39,7 +39,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "0.61.5",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "react-native-svg": "^12.1.0"
   },
   "husky": {
     "hooks": {
